# python-client

./: .gitignore  README.md  basic_client.py  pyproject.toml  start.bat  start.sh  strategy_config.json
docs/: architecture.md  architecture_strategy_visual.html  deep-research-report (1).md  deep-research-report.md  strategy.md
lychee_basic_client/: cli.py  config.py  framing.py  messages.py  session.py  strategy.py
lychee_basic_client/events/: __init__.py  handlers.py
lychee_basic_client/models/: __init__.py  map.py  state.py  weather.py
lychee_basic_client/observability/: __init__.py  logging_setup.py
lychee_basic_client/planning/: __init__.py  estimates.py  route_profiles.py  routes.py  tasks.py
lychee_basic_client/protocol/: __init__.py  actions.py  framing.py  messages.py
lychee_basic_client/public_info/: __init__.py  manager.py  recorder.py  snapshot.py
lychee_basic_client/rules/: __init__.py  blocking.py  buffs.py  guards.py  legal.py  states.py
lychee_basic_client/runtime/: __init__.py  session.py
lychee_basic_client/strategies/: __init__.py  base.py  combat.py  context.py  control.py  delivery.py  factory.py  guard.py  pipeline.py  resources.py  route_edge_guard.py  route_edge_recovery.py  rush.py  (+5 more)
tests/: test_actions.py  test_combat_strategy.py  test_config.py  test_delivery_strategy.py  test_framing.py  test_logging_setup.py  test_messages.py  test_models.py  test_optimization_strategy.py  test_public_info.py  test_route_edge_states.py  test_session_smoke.py  test_strategy_pipeline.py  test_task_planning.py  test_weather_events_routing.py
(+3 files in other folders)
